Added test for deploy after reload